--- a/Cat.dproj
+++ b/Cat.dproj
@@ -6,7 +6,7 @@
         <MainSource>Cat.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Release</Config>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Platform Condition="'$(Platform)'==''">OSX64</Platform>
         <TargetedPlatforms>4099</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
@@ -168,6 +168,9 @@
         </DCCReference>
         <DCCReference Include="ModalBox.pas">
             <Form>ModalBoxFrm</Form>
+        </DCCReference>
+        <DCCReference Include="FMX.Platform.Mac.pas">
+            <Form>$ENDIF</Form>
         </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
